--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </tr>
 <tr>
 <td valign="top">
-<img class="vam" src="http://img01.51jobcdn.com/im/2016/resume/y1.png" width="20" height="20">目前正在找工作</td>
+<img class="vam" src="plot.png" width="20" height="20">目前正在找工作</td>
 <td valign="top">
 <img class="vam" src="http://img01.51jobcdn.com/im/2016/resume/y2.png" width="20" height="20">15500109730</td>
 <td valign="top"><table cellspacing="0" cellpadding="0" border="0" class="email"><tbody><tr>
