--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           .eng .pr20 .keys{width:100px}
           .eng .email{width:270px}
         </style><table cellpadding="0" cellspacing="0" align="center" bgcolor="#fff" class="column"><tbody><tr><td valign="top"><table xmlns="" cellspacing="0" cellpadding="0" border="0" class="box1"><tbody><tr>
-<td class="hbox" align="middle"><img src="http://i.51job.com/resume/ajax/image.php?type=avatar&amp;userid=345249454&amp;key=eb8eccd54b5f7d3cba9c1f2c2f95fde1" width="85" height="104" class="head" alt="头像"></td>
+<td class="hbox" align="middle"><img src="plot.png" width="85" height="104" class="head" alt="头像"></td>
 <td><table cellspacing="0" cellpadding="0" border="0" class="infr"><tbody>
 <tr>
-<td colspan="2" class="name">史权</td>
+<td colspan="2" class="name">MM</td>
 <td align="right" class="icard">
                     ID:345249454</td>
 </tr>
